# LeanGate-code

./: .gitignore  .gitmodules  README.md  demo.sh  pyproject.toml
configs/: mast3r_slam_public_calib.yaml  mast3r_slam_public_no_calib.yaml
docs/: dataset_layouts.md
scripts/: download_checkpoints.py  generate_rgb_lists.py  run_rgb_folder.py  run_slam_dataset.py  run_slam_scene.py
src/evaluate/: __init__.py  datasets.py  download_checkpoints.py  produce_policy_rgb_lists.py  public_config.py  run_mast3r_slam.py
src/slam_prefilter/utils/: augment.py  data_loader.py
src/student/: __init__.py  base.py  checkpointing.py  flare.py  registry.py
tests/: test_datasets.py  test_download_checkpoints.py  test_flare_checkpoint_loading.py  test_leangate_build_kwargs.py  test_manifest.py  test_rgb_folder_demo.py  test_run_mast3r_slam.py
